task_3/9_nat_gateway.tf
resource "aws_eip" "allocation_ip" {
  vpc      = true

}

resource "aws_nat_gateway" "task3_ng" {
  allocation_id = "${aws_eip.allocation_ip.id}"
  subnet_id     = "${aws_subnet.task3_public1.id}"

 tags = {
    Name = "task3_NG"
  }
}
